--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>hwcrypto.js</title>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/hwcrypto/hwcrypto-legacy.js"></script>
   <script src="bower_components/hwcrypto/hwcrypto.js"></script>
   <script src="hex2base.js"></script>
   <style type="text/css">
