--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script src="bower_components/hwcrypto/hwcrypto-legacy.js"></script>
   <script src="bower_components/hwcrypto/hwcrypto.js"></script>
   <script src="hex2base.js"></script>
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+
   <style type="text/css">
     body {font-family: Georgia, serif; margin: 2em;}
   </style>
@@ -72,7 +74,7 @@
 </head>
 <body>
   <noscript>
-    <h1>Plase enable JavaScript!</h1>
+    <h1><i class="fa fa-meh-o" aria-hidden="true"></i> Plase enable JavaScript!</h1>
     <p><a href="http://enable-javascript.com">Instructions are available on
     <b>enable-javascript.com</b></a></p>
   </noscript>
