Center noscript text

--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
 </head>
 <body>
   <noscript>
-    <h1><i class="fa fa-meh-o" aria-hidden="true"></i> Plase enable JavaScript!</h1>
+    <center>
+    <i class="fa fa-meh-o fa-5x" aria-hidden="true"></i>
+    <h1>Plase enable JavaScript!</h1>
     <p><a href="http://enable-javascript.com">Instructions are available on
     <b>enable-javascript.com</b></a></p>
+    </center>
   </noscript>
   <script>
     $(document).ready(function() {
