Less frightening message

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   <noscript>
     <center>
     <i class="fa fa-meh-o fa-5x" aria-hidden="true"></i>
-    <h1>Please enable JavaScript!</h1>
+    <h1>JavaScript is disabled</h1>
+    <p>Please enable javascript and refresh the page</p>
     <p><a href="http://enable-javascript.com">Instructions are available on
     <b>enable-javascript.com</b></a></p>
     </center>
