--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>hwcrypto.js</title>
+  <title>hwcrypto.js demo &amp; test page</title>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/hwcrypto/hwcrypto-legacy.js"></script>
   <script src="bower_components/hwcrypto/hwcrypto.js"></script>
@@ -75,7 +75,7 @@
 <body>
   <noscript>
     <center>
-    <i class="fa fa-meh-o fa-5x" aria-hidden="true"></i>
+    <i class="fa fa-frown-o fa-6" aria-hidden="true"></i>
     <h1>JavaScript is disabled</h1>
     <p>Please enable javascript and refresh the page</p>
     <p><a href="http://enable-javascript.com">Instructions are available on
