Huge sad face and better font in code segments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <style type="text/css">
     body {font-family: Georgia, serif; margin: 2em;}
+    .sadface {font-size: 9em;}
+    code {font-family: monospace;}
   </style>
 
   <script>
@@ -75,7 +77,7 @@
 <body>
   <noscript>
     <center>
-    <i class="fa fa-frown-o fa-6" aria-hidden="true"></i>
+    <i class="fa fa-frown-o sadface" aria-hidden="true"></i>
     <h1>JavaScript is disabled</h1>
     <p>Please enable javascript and refresh the page</p>
     <p><a href="http://enable-javascript.com">Instructions are available on
